; ModuleID = '/home/carl/AnghaBench/libgit2/tests/filter/extr_query.c_filter_for.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/filter/extr_query.c_filter_for.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@GIT_FILTER_TO_WORKTREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @filter_for to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filter_for(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @g_repo, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @GIT_FILTER_TO_WORKTREE, align 4
  %10 = call i32 @git_filter_list_load(i32** %5, i32 %7, i32* null, i8* %8, i32 %9, i32 0)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %5, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @git_filter_list_contains(i32* %12, i8* %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @git_filter_list_free(i32* %15)
  %17 = load i32, i32* %6, align 4
  ret i32 %17
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_filter_list_load(i32**, i32, i32*, i8*, i32, i32) #1

declare dso_local i32 @git_filter_list_contains(i32*, i8*) #1

declare dso_local i32 @git_filter_list_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
